<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:weightSum="13">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/accounts"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"
        android:inputType="none"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/add_trans_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:hint="@string/transFrom"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_weight="3"

        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/method"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"
        android:inputType="none"
        />
    <EditText
        android:id="@+id/add_trans_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:hint="@string/method"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_weight="1"
        android:inputType="text"
        android:importantForAutofill="no"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/balance"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"
        android:inputType="none"
        />
    <TextView
        android:id="@+id/add_trans_bal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:hint="@string/balance"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"
        android:inputType="none"
        android:importantForAutofill="no"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/amount"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"
        android:inputType="none"
        />
    <EditText
        android:id="@+id/add_trans_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:hint="@string/amount"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true">
            <Button
                android:id="@+id/btn_add_trans_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="30sp"
                />
            <Button
                android:id="@+id/btn_add_trans_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textSize="30sp"
                />

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>

