<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="4dp"
        android:padding="3dp"

        >
        <TextView
            android:id="@+id/transDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#424971"
            android:padding="2dp"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/date"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="125sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/name"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="#899"/>
        <TextView
            android:id="@+id/transName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2446"
            android:padding="2dp"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/name"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="125sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/amount"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="#899"/>
            <TextView
                android:id="@+id/transAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#2646"
                android:padding="2dp"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/amount"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="125sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/balance"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="#899"/>
        <TextView
            android:id="@+id/transAccBal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2446"
            android:padding="2dp"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/balance"
            />
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>